--- a/erp-jgsf/src/main/resources/Exception_zh_CN.properties
+++ b/erp-jgsf/src/main/resources/Exception_zh_CN.properties
@@ -1,4 +1,6 @@
-1000=\u7CFB\u7EDF\u8FD0\u884C\u5F02\u5E38\uFF01
+1000=\u7CFB\u7EDF\u8FD0\u884C\u5F02\u5E38\uFF0C\u672A\u77E5\u9519\u8BEF\uFF01
 1001=\u672A\u7ED1\u5B9A\u7684\u5F02\u5E38\u4EE3\u7801\uFF01
 1002=\u5BF9\u8C61\u4E3A\u7A7A\u5F02\u5E38\uFF01
 1003=\u4E0D\u5408\u6CD5\u7684\u53C2\u6570\u5F02\u5E38\uFF01
+1004=\u6570\u636E\u4E0D\u5408\u6CD5\uFF01
+1005=\u5206\u5E03\u5F0F\u5F02\u5E38\u9519\u8BEF\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458\u8FDB\u884C\u68C0\u67E5\!
