--- a/erp-jgsf/src/main/resources/Validation_zh_CN.properties
+++ b/erp-jgsf/src/main/resources/Validation_zh_CN.properties
@@ -1,1 +1,3 @@
+invalid_length=\u957F\u5EA6\u9519\u8BEF\uFF0C\u957F\u5EA6\u5FC5\u987B\u5728{min}\u4E0E{max}\u4E4B\u95F4
+invalid_blank=\u6570\u636E\u9519\u8BEF\uFF0C\u6570\u636E\u4E0D\u80FD\u4E3A\u7A7A\uFF01
 
