添加中文注解

--- a/erp-jgsf/src/main/resources/Exception_zh_CN.properties
+++ b/erp-jgsf/src/main/resources/Exception_zh_CN.properties
@@ -1,3 +1,4 @@
+404=\u8BF7\u6C42\u672A\u627E\u5230\uFF01
 1000=\u5185\u90E8\u9519\u8BEF\uFF0C\u672A\u77E5\u7684\u7CFB\u7EDF\u8FD0\u884C\u5F02\u5E38\uFF01{0}
 1001=\u672A\u7ED1\u5B9A\u7684\u5F02\u5E38\u4EE3\u7801\uFF01
 1002=\u5185\u90E8\u9519\u8BEF\uFF0C\u5BF9\u8C61\u4E3A\u7A7A\u5F02\u5E38\uFF01{0}
